<resources>
    <string name="app_name">Notebook</string>
    <!-- main -->
    <string name="all_notes">All</string>
    <string name="business_notes">Business</string>
    <string name="personal_notes">Personal</string>
    <string name="list_name">To-Do List</string>
    <string name="exit_message">Please press back again to exit</string>
    <string name="calendar">Calendar</string>
    <!-- menu and dialogs -->
    <string name="alert_dialog_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_archive">Archive</string>
    <string name="delete_note_message">Do you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_dearchive">Activate</string>
    <string name="choose_snooze_length">Snooze length:</string>
    <string name="choose_alarm_length">Choose alarm length:</string>
    <string name="menu_alarm_rings">Alarm length</string>
    <string name="menu_alarm_snooze">Snooze length</string>
    <string name="choose_theme">Choose theme:</string>
    <string name="choose_language">Choose language:</string>
    <string name="archive">Archive</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="trash">Trash</string>
    <string name="menu_theme">Theme</string>
    <string name="choose_days">Choose days:</string>
    <string name="select_time_add_note">Select time</string>
    <!-- note -->
    <string name="week_days_warning">You did not choose any of the week days for alarm!</string>
    <string name="note">Note</string>
    <string name="note_created_at">created at:</string>
    <string name="note_modified_at">modified at:</string>
    <string name="created_at">created at: </string>
    <string name="created_modified_at">created/modified at: </string>
    <string name="bt_savenote">Save</string>
    <string name="bt_personal">Personal</string>
    <string name="bt_business">Business</string>
    <string name="add_note_checkbox_warning">Please check personal or business box!</string>
    <string name="add_note_title_warning">Please add a title</string>
    <string name="add_note_title_hint">Title</string>
    <string name="week_days">Week days</string>
    <string name="alarm_once">Once</string>
    <string name="alarm_weekly">Weekly</string>
    <string name="alarm_off">Alarm off</string>
    <string name="alarm_occurrence">Alarm</string>
    <!-- to-do list -->
    <string name="add_shop_title_hint">Add title here</string>
    <string name="add_item">Add item</string>
    <string name="empty_todo_list_message_add">Sorry, list is empty. Create new list.</string>
    <string name="empty_todo_list_message_save">Sorry, nothing to save.</string>
    <string name="btn_add_item">Add item</string>
    <string name="btn_save_items_list">Save</string>
    <!-- archive -->
    <string name="title_archive">Archive</string>
    <string name="archived_items_message">Please restore archived item in order to change it</string>
    <!-- alarm -->
    <string name="alarm_dismiss">Dismiss</string>
    <!-- about -->
    <string name="email_label">E-mail:</string>
    <string name="email">beleznik.bal@gmail.com</string>
    <string name="contact">Contact:</string>
    <string name="developer">Developed by Predrag Schindler</string>
    <string name="version">version</string>
    <!-- material calendar weekdays -->
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_alarm_type">Please choose alarm type!</string>

    <string-array name="days_short">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="week_days_names">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>Serbian</item>
        <item>Croatian</item>
        <item>Macedonian</item>
    </string-array>

    <string-array name="themes">
        <item>Theme 1</item>
        <item>Theme 2</item>
    </string-array>

    <string-array name="alarm_length">
        <item>15 sec</item>
        <item>30 sec</item>
        <item>01 min</item>
        <item>03 min</item>
        <item>05 min</item>
        <item>10 min</item>
    </string-array>

    <string-array name="snooze_length">
        <item>03 min</item>
        <item>05 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

</resources>
