<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluecurves"
    tools:context=".NoteActivity"
    tools:layout_editor_absoluteY="25dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_note"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/board_texture999"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:title="@string/note"
        app:titleTextAppearance="@style/CustomTextAppearance">

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_title"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:gravity="center"
            android:hint="@string/add_note_title_hint"
            android:maxLines="1"
            android:padding="3dp"
            android:textColor="@color/colorDarkGray"
            android:textColorHint="@color/colorDarkGray"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_rounded"
        android:outlineProvider="background"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_title"
        app:layout_constraintBottom_toTopOf="@+id/rl_alarm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:gravity="top"
            android:hint="@string/note"
            android:textColor="@color/colorDarkGray"
            android:textColorHint="@color/colorDarkGray"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/rl_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_note_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <TextView
            android:id="@+id/tv_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/alarm_occurrence"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_group_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/tv_alarm"
            android:layout_toStartOf="@+id/sw_alarm"
            android:orientation="vertical"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/rb_once"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorWhite"
                android:ellipsize="end"
                android:layout_gravity="start"
                android:maxLines="1"
                android:text="@string/alarm_once"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:buttonTint="@color/colorWhite"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/alarm_weekly"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </RadioGroup>

        <Switch
            android:id="@+id/sw_alarm"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:thumbTint="@drawable/new_thumb"
            android:trackTint="@drawable/new_track" />



    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_note_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_shape"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_add_note_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_shape"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4">

        <CheckBox
            android:id="@+id/cbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:buttonTint="@color/colorWhite"
            android:text="@string/bt_personal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:buttonTint="@color/colorWhite"
            android:text="@string/bt_business"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_shape"
        android:gravity="center"
        android:text="@string/bt_savenote"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>